<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label1" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView"
            android:src="@mipmap/network_server" />

        <EditText android:id="@+id/lookup_host"
            android:layout_width="281dp"
            android:layout_height="match_parent"
            android:hint="Host Name">
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label2"
            android:id="@+id/textView2"/>
        <Button
            android:id="@+id/lookup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_look"
            android:layout_marginLeft="100dp"/>

        <ImageButton
            android:id="@+id/ibutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_dialog_email"
            android:layout_gravity="top" />
    </LinearLayout>

    <TextView
        android:id="@+id/lookup_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:text=" " />
</LinearLayout>
